Doc/0.3/11-windows/01_uiwindow_ru.md
![RimUI Framework](../../../About/Preview.png)

**RimUI Framework** — ядро `0.8.31` · мод `0.3.1` · RimWorld `1.6`

---

[Оглавление](../index_ru.md) - Окна | Пред.: [ConfirmPopup](../10-overlays/10_confirmpopup_ru.md) | След.: [ModalWindow](02_modalwindow_ru.md) | [English](01_uiwindow_en.md)

---

# UiWindow

Базовый класс окна: подключает дерево элементов фреймворка к обычному окну RimWorld
(`Verse.Window`). Обычно напрямую не создаётся — используйте `ModalWindow` (или его потомков
`MessageWindow`/`ConfirmWindow`, см. соответствующие страницы).

`RimUI.Adapter.UiWindow : Verse.Window`

## Пример

```csharp
var root = new Grid();
root.Cell(12, Button.Make("Привет"));
var window = new UiWindow(root) { FixedSize = new Vector2(400f, 300f) };
window.Show();
```

## Параметры

| Параметр | Тип | По умолчанию | Описание |
|---|---|---|---|
| `Root` | `UiElement` | из конструктора | Корневой элемент содержимого. |
| `Theme` | `Theme` | `null` | Явная тема окна; `null` = следовать активной теме, меняющейся на лету. |
| `FixedSize` | `Vector2` | `Vector2.zero` | Фиксированный размер; `0` = авто-подгон под контент (ширина до 92% экрана, высота до `Theme.MaxWindowHeightFraction`). |
| `Resizable` | `ResizeEdges` | `None` | За какие края окно тянется мышью. См. раздел «Растягивание окна» ниже. |
| `MinWindowSize` | `Vector2` | `(180, 120)` | Нижняя граница размера при растягивании. |
| `MaxWindowSize` | `Vector2` | `Vector2.zero` | Верхняя граница; `0` по оси = ограничение только экраном. |

**Жизнь состояния окна**: внутреннее состояние (скроллы, фокус, раскрытия деревьев, значения
контролов без пользовательского источника) живёт СТРОГО от открытия до закрытия окна. Каждое
открытие — чистая инициализация, даже при повторном `Show()` того же экземпляра. Ничего не
переживает закрытие; сбор данных перед закрытием — задача мододела (колбеки/`OnClose`).

## Точная формула авто-размера

```
maxW = UI.screenWidth * 0.92         // захардкоженный литерал, НЕ настраивается темой
maxH = UI.screenHeight * Theme.MaxWindowHeightFraction   // по умолчанию 0.85

итоговая ширина  = min(содержимое.Width  + 36, maxW)   // 36 = 2×Chrome (поля окна по 18px)
итоговая высота  = min(содержимое.Height + 36, maxH)
```

`maxH` считается от ПОЛНОЙ высоты экрана в пикселях — без вычета высоты нижней панели RimWorld
или других элементов интерфейса игры. Содержимое меряется с доступной шириной `maxW - 36` (то
есть уже с учётом полей окна). Если после этих ограничений контент по высоте всё равно не влезает
в получившееся окно — включается внутренний скролл (порог `содержимое.Height > доступная_высота
+ 0.5`, эпсилон на погрешность float).

## Растягивание окна

```csharp
new ModalWindow(body)
{
    Title = "Отчёт",
    Resizable = ResizeEdges.All,
    MinWindowSize = new Vector2(260f, 160f),
}.Show();
```

Значения `ResizeEdges` — те же, что у блоков (`All`, `Horizontal`, `Corners`, отдельные стороны
и углы); полный список — на странице «Style — модель стиля».

Особенности именно окон:

* **тяга за левый и верхний края двигает и позицию** — противоположная сторона остаётся на
  месте, окно не «уползает»;
* **вытянутый размер запоминается** и отдаётся вместо расчётного: у окна с авто-подгоном размер
  считается по содержимому каждый раз, когда игра его спрашивает (открытие, смена разрешения,
  UI-масштаба), и без этого окно прыгало бы обратно;
* зона захвата лежит **на видимой рамке окна** — той, которую рисует панель, а не на границе
  системного прямоугольника: когда панель рисует фреймворк, нативная подложка выключена и рамка
  ложится внутрь полей. Ширина зоны — 3 точки наружу и 6 внутрь; оба числа переопределяются
  (`ResizeGrabOut`, `ResizeGrab`).

## Увод окна за край экрана

Окно можно утащить за край: за левый, правый и нижний уходит до **80%** его размера, на экране
остаётся пятая часть. За **верхний край окно не уходит совсем** — за шапку его тащат, и уведя её,
вернуть окно было бы нечем.

Доля настраивается переопределением `OffscreenFraction`.

Зажатие пересчитывается не только при перетаскивании, но и при **смене разрешения экрана или
UI-масштаба**: уведённое окно иначе могло бы остаться целиком за границей.

## Наведение и окно сверху

Пока над окном находится другое, его содержимое на курсор не отзывается: ни подсветки, ни
курсоров, ни подсказок. Считается это по верхнему окну под мышью, а не по порядку отрисовки, и
работает само — настраивать нечего.

Растягивание держится того же правила: начать его сквозь чужое окно нельзя, но уже начатую тягу
окно доводит до конца, даже если курсор ушёл в сторону.

## Стили

Панель окна — `Theme.WindowPanelFor(SheetKey)` (`protected virtual string SheetKey => "window"`,
переопределяется наследниками).

## Методы

| Метод | Возвращает | Описание |
|---|---|---|
| `UiWindow(UiElement root, Theme theme = null)` (конструктор) | — | Создать окно с корневым элементом. |
| `Show()` | `void` | Добавить окно в `Find.WindowStack`. |
| `InitialSize` (override, свойство) | `Vector2` | Авто-размер по контенту либо `FixedSize`. |

## События

Собственных `Action`-колбэков нет — жизненный цикл управляется методами `Verse.Window`
(`PreOpen`, `PostClose` и т.п.), переопределяемыми в `ModalWindow` (см. страницу «ModalWindow»,
поле `OnClose`).

## Поддержка механик

| Механика | Поддержка | Пояснение |
|---|---|---|
| Стиль панели | Да | `Theme.WindowPanelFor(SheetKey)`. |
| Спрайт-рамка | Да | Если задан спрайт панели — гасится нативная подложка окна (`doWindowBackground=false`). |
| Скролл при переполнении | Да | Встроенный собственный `ScrollBox`, не нативный `Widgets.BeginScrollView`. |
| Состояние между открытиями | Нет | Намеренно: каждое открытие — с чистого листа; данные собирает мододел. |
| Disabled/Hover-fade | Не применимо | Понятия относятся к отдельным элементам внутри окна, не к окну целиком. |


---

[Оглавление](../index_ru.md) - Окна | Пред.: [ConfirmPopup](../10-overlays/10_confirmpopup_ru.md) | След.: [ModalWindow](02_modalwindow_ru.md) | [English](01_uiwindow_en.md)

## Поддержать автора
Если тебе нравится RimUI Framework, можешь поддержать разработку:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Спасибо! ❤️
